--- a/index.html
+++ b/index.html
@@ -158,5 +158,6 @@
                 </tr>
             </table>
   <footer><a href="index.html">Guayerd Bikes</footer>
+    <script src="home.js"></script>
 </body>
 </html>
