--- a/contacto.html
+++ b/contacto.html
@@ -55,7 +55,7 @@
     </div>
     <h2 id="estilo">Mapa</h2>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.5123452907283!2d-58.45006848477063!3d-34.59120378046264!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb5f12e398ecd%3A0x98abf435fbfab70!2sAv.%20Corrientes%206237%2C%20C1427BPA%20CABA!5e0!3m2!1ses!2sar!4v1595380919856!5m2!1ses!2sar" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+    <footer><a href="index.html">Guayerd Bikes</footer>
     <script src="home.js"></script>
-
 </body>
 </html>
