--- a/productos.html
+++ b/productos.html
@@ -61,7 +61,7 @@
     </div>
 
 <footer><a href="index.html">Guayerd Bikes</footer>
-    <script src="home.js"></script>
+    <script src="producto.js"></script>
 
 </body>
 
