imagen centrada de hot sale

--- a/ofertasPersonalizadas.html
+++ b/ofertasPersonalizadas.html
@@ -30,7 +30,9 @@
             <h1>Guayerd Bikes</h1>
         </header>
      </nav>  
-    <img src="imgenHotSale.png">
+    <div class="hotsale">
+        <img src="imgenHotSale.png">
+    </div>
     <footer><a href="index.html">Guayerd Bikes</footer>
 </body>
 </html>
