--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
     <title>Guayerd Bikes - Bicicletas de Competición y Urbanas y competicion.</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital@1display=swap" rel="stylesheet">
+    <script>
+        (function(h,e,a,t,m,p) {
+        m=e.createElement(a);m.async=!0;m.src=t;
+        p=e.getElementsByTagName(a)[0];p.parentNode.insertBefore(m,p);
+        })(window,document,'script','https://u.heatmap.it/log.js');
+        </script>
 </head>
 <body>
      <nav>
