--- a/ofertasPersonalizadas.html
+++ b/ofertasPersonalizadas.html
@@ -18,6 +18,12 @@
 
     <link rel="stylesheet" href="style.css">
     <title>Hot sale</title>
+    <script>
+        (function(h,e,a,t,m,p) {
+        m=e.createElement(a);m.async=!0;m.src=t;
+        p=e.getElementsByTagName(a)[0];p.parentNode.insertBefore(m,p);
+        })(window,document,'script','https://u.heatmap.it/log.js');
+        </script>
 </head>
 <body>
     <nav>
@@ -30,6 +36,7 @@
             <h1>Guayerd Bikes</h1>
         </header>
      </nav>  
+     
     <div class="hotsale">
         <img src="imgenHotSale.png">
     </div>
