--- a/index.html
+++ b/index.html
@@ -165,6 +165,15 @@
             </table>
   <footer><a href="index.html">Guayerd Bikes</footer>
     <script src="home.js"></script>
+       
+<div id="sfcrkmhuc6dac4qyuqzruh2tgajt2p1q3pb">
+</div>
+<script type="text/javascript" src="https://counter3.stat.ovh/private/counter.js?c=rkmhuc6dac4qyuqzruh2tgajt2p1q3pb&down=async" async>
+</script>
+<noscript><a href="https://www.contadorvisitasgratis.com" title="contador de visitas com">
+<img src="https://counter3.stat.ovh/private/contadorvisitasgratis.php?c=rkmhuc6dac4qyuqzruh2tgajt2p1q3pb" border="0" title="contador de visitas com" alt="contador de visitas com"></a>
+</noscript>    
+
     
 </body>
 </html>                                         
