--- a/ofertasPersonalizadas.html
+++ b/ofertasPersonalizadas.html
@@ -40,6 +40,6 @@
     <div class="hotsale">
         <img src="imgenHotSale.png">
     </div>
-    <footer><a href="index.html">Guayerd Bikes</footer>
+    <footer><a href="index.html">Guayerd Bikes - Grupo B</footer>
 </body>
 </html>
