--- a/productos.html
+++ b/productos.html
@@ -66,7 +66,7 @@
 
     </div>
 
-<footer><a href="index.html">Guayerd Bikes</footer>
+<footer><a href="index.html">Guayerd Bikes - Grupo B</footer>
     <script src="producto.js"></script>
 
 </body>
