--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                    
                 </tr>
             </table>
-  <footer><a href="index.html">Guayerd Bikes</footer>
+  <footer><a href="index.html">Guayerd Bikes - Grupo B</footer>
     <script src="home.js"></script>
     
 </body>
