--- a/index.html
+++ b/index.html
@@ -170,7 +170,10 @@
 
         </tr>
     </table>
-
+    <div id="sfcfhcc9epeyxkepypu4wlpedspbsps7acm"></div>
+    <script type="text/javascript" src="https://counter3.stat.ovh/private/counter.js?c=fhcc9epeyxkepypu4wlpedspbsps7acm&down=async" async></script>
+    <noscript><a href="https://www.contadorvisitasgratis.com" title="contadores de visitas"><img src="https://counter3.stat.ovh/private/contadorvisitasgratis.php?c=fhcc9epeyxkepypu4wlpedspbsps7acm" border="0" title="contadores de visitas" alt="contadores de visitas"></a></noscript>
+    
     <footer><a href="index.html">Guayerd Bikes - Grupo B</footer>
 
 
