--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         content="Bicicletas de competición y urbanas. Somos fabricantes de las mejores bicicletas de la región. Atención personalizada y venta de accesorios.">
     <meta property="twitter:image"
         content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+        <link  rel="icon"   href="guayerd.logo.png" type="image/png" />    
     <title>Guayerd Bikes - Bicicletas de Competición y Urbanas y competicion.</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital@1display=swap" rel="stylesheet">
@@ -170,10 +171,8 @@
 
         </tr>
     </table>
-    <div id="sfcfhcc9epeyxkepypu4wlpedspbsps7acm"></div>
-    <script type="text/javascript" src="https://counter3.stat.ovh/private/counter.js?c=fhcc9epeyxkepypu4wlpedspbsps7acm&down=async" async></script>
-    <noscript><a href="https://www.contadorvisitasgratis.com" title="contadores de visitas"><img src="https://counter3.stat.ovh/private/contadorvisitasgratis.php?c=fhcc9epeyxkepypu4wlpedspbsps7acm" border="0" title="contadores de visitas" alt="contadores de visitas"></a></noscript>
     
+
     <footer><a href="index.html">Guayerd Bikes - Grupo B</footer>
 
 
