--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
 
     <title>Guayerd Bikes - Bicicletas de Competición y Urbanas y competicion.</title>
+    
     <link rel="icon" href="guayerd.logo.png" type="image/png" />
 
     <link rel="stylesheet" href="style.css">
@@ -174,8 +175,11 @@
         </tr>
     </table>
     <div id="sfc1g6bh3pr7ubr76senf3jb71r6ppyk1bm"></div>
-<script type="text/javascript" src="https://counter3.stat.ovh/private/counter.js?c=1g6bh3pr7ubr76senf3jb71r6ppyk1bm&down=async" async></script>
-<noscript><a href="https://www.contadorvisitasgratis.com" title="contador para web"><img src="https://counter3.stat.ovh/private/contadorvisitasgratis.php?c=1g6bh3pr7ubr76senf3jb71r6ppyk1bm" border="0" title="contador para web" alt="contador para web"></a></noscript>
+    <script type="text/javascript"
+        src="https://counter3.stat.ovh/private/counter.js?c=1g6bh3pr7ubr76senf3jb71r6ppyk1bm&down=async" async></script>
+    <noscript><a href="https://www.contadorvisitasgratis.com" title="contador para web"><img
+                src="https://counter3.stat.ovh/private/contadorvisitasgratis.php?c=1g6bh3pr7ubr76senf3jb71r6ppyk1bm"
+                border="0" title="contador para web" alt="contador para web"></a></noscript>
 
     <footer><a href="index.html">Guayerd Bikes - Grupo B</footer>
 
