--- a/index.html
+++ b/index.html
@@ -177,9 +177,9 @@
     <div id="sfc1g6bh3pr7ubr76senf3jb71r6ppyk1bm"></div>
     <script type="text/javascript"
         src="https://counter3.stat.ovh/private/counter.js?c=1g6bh3pr7ubr76senf3jb71r6ppyk1bm&down=async" async></script>
-    <noscript><a href="https://www.contadorvisitasgratis.com" title="contador para web"><img
+    <script><a href="https://www.contadorvisitasgratis.com" title="contador para web"><img
                 src="https://counter3.stat.ovh/private/contadorvisitasgratis.php?c=1g6bh3pr7ubr76senf3jb71r6ppyk1bm"
-                border="0" title="contador para web" alt="contador para web"></a></noscript>
+                border="0" title="contador para web" alt="contador para web" ></img></a></script>
 
     <footer><a href="index.html">Guayerd Bikes - Grupo B</footer>
 
