--- a/index.html
+++ b/index.html
@@ -174,13 +174,8 @@
 
         </tr>
     </table>
-    <div id="sfc1g6bh3pr7ubr76senf3jb71r6ppyk1bm"></div>
-    <script type="text/javascript"
-        src="https://counter3.stat.ovh/private/counter.js?c=1g6bh3pr7ubr76senf3jb71r6ppyk1bm&down=async" async></script>
-    <script><a href="https://www.contadorvisitasgratis.com" title="contador para web"><img
-                src="https://counter3.stat.ovh/private/contadorvisitasgratis.php?c=1g6bh3pr7ubr76senf3jb71r6ppyk1bm"
-                border="0" title="contador para web" alt="contador para web" ></img></a></script>
-
+    
+    <div id="sfce9tmyn1stpa9wtjbtu56k4suk1ghdrl7"></div><script type="text/javascript" src="https://counter3.stat.ovh/private/counter.js?c=e9tmyn1stpa9wtjbtu56k4suk1ghdrl7&down=async" async></script><noscript><a href="https://www.contadorvisitasgratis.com" title="contadores para paginas web"><img src="https://counter3.stat.ovh/private/contadorvisitasgratis.php?c=e9tmyn1stpa9wtjbtu56k4suk1ghdrl7" border="0" title="contadores para paginas web" alt="contadores para paginas web"></a></noscript>
     <footer><a href="index.html">Guayerd Bikes - Grupo B</footer>
 
 
