--- a/contacto.html
+++ b/contacto.html
@@ -18,6 +18,7 @@
     <title>Guayerd Bikes - Bicicletas de Competición y Urbanas.</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital@1display=swap" rel="stylesheet">
+    <link rel="icon" href="guayerd.logo.png" type="image/png" />
     <script>
         (function(h,e,a,t,m,p) {
         m=e.createElement(a);m.async=!0;m.src=t;
