--- a/ofertasPersonalizadas.html
+++ b/ofertasPersonalizadas.html
@@ -15,7 +15,7 @@
     <meta property="twitter:title" content="Guayerd">
     <meta property="twitter:description" content="Bicicletas de competición y urbanas. Somos fabricantes de las mejores bicicletas de la región. Atención personalizada y venta de accesorios.">
     <meta property="twitter:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
-
+    <link rel="icon" href="guayerd.logo.png" type="image/png" />
     <link rel="stylesheet" href="style.css">
     <title>Hot sale</title>
     <script>
