--- a/productos.html
+++ b/productos.html
@@ -17,6 +17,7 @@
     <meta property="twitter:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
     <title>Nuestras Bicis | Guayerd Bikes - Bicicletas de Competición y Urbanas."</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="guayerd.logo.png" type="image/png" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital@1display=swap" rel="stylesheet">
     <script>
         (function(h,e,a,t,m,p) {
