--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </header>
     </nav>
     <section>
-        <img src="guayerdBikes-logo.jpg" title="Guayerd Bikes">
+        <div class="banner"></div>
 
 
         <h3>Guayerd Bikes</h3>
